recruitment-process-section-added

--- a/index.html
+++ b/index.html
@@ -487,6 +487,69 @@
     <!-- =================  Tab section how we are ends  ================================= -->
 
 
+    <!-- =================  Recruitment Process section starts  ================================= -->
+    <section class="recruitment_section section_pd_tb">
+        <div class="container py-4">
+            <div class="section_header mb-5">
+                <h3>How <span>We Do</span></h3>
+                <h2>The Recruitment Process</h2>
+            </div>
+            <div class="container padding_added_row padding_null_1400">
+                <div class="recruitment_row">
+                   <div class="row recruitment_row_top">
+                        <div class="col-lg-4">
+                           <div class="wrap_process">
+                               <div class="icondiv">
+                                   <img src="assets/icons/application.png" alt="">
+                                   <div class="process_number">01</div>
+                               </div>
+                           </div>
+                        </div>
+                        <div class="col-lg-4">
+                           <div class="wrap_process">
+                               <div class="icondiv">
+                                   <img src="assets/icons/interview.png" alt="">
+                                   <div class="process_number">02</div>
+                               </div>
+                           </div>
+                        </div>
+                        <div class="col-lg-4">
+                           <div class="wrap_process">
+                               <div class="icondiv">
+                                   <img src="assets/icons/confirm-job.png" alt="">
+                                   <div class="process_number">03</div>
+                               </div>
+                           </div>
+                        </div>
+                        <div class="process_line"></div>
+                   </div>
+                   <div class="row recruitment_content_row">
+                        <div class="col-lg-4 recruitment_item">
+                           <div class="recruitment_item_wrap">
+                               <h5>Application</h5>
+                               <p>This need could vary from filling a vacated position, better managing a team workload, or expanding.</p>
+                           </div>
+                        </div>
+                        <div class="col-lg-4 recruitment_item">
+                            <div class="recruitment_item_wrap">
+                                <h5>Interview</h5>
+                                <p>HR department review the applications & eliminate any candidate who does not meet the minimum requirements.</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 recruitment_item">
+                            <div class="recruitment_item_wrap">
+                                <h5>Confirmation Of Employment</h5>
+                                <p>The organization and hiring committee, one or several interviews are scheduled for those remaining candidates.</p>
+                            </div>
+                        </div>
+                   </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =================  Recruitment Process section ends ================================= -->
+
+
     <div class="mt-5 pt-5"></div>
 
     <!-- bootstrap js -->
