jobs-based-on-state-section-added

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     <!-- =================  discover section starts  ================================= -->
     <section class="discover_section section_pd_tb">
         <div class="container py-4">
-            <div class="section_header mb-5">
+            <div class="section_header">
                 <h2>Discover <span>Complete Work</span> Freedom</h2>
             </div>
             <div class="discover_section_buttons">
@@ -387,7 +387,7 @@
     <!-- =================  accredation section starts  ================================= -->
      <section class="section_pd_tb pt-0">
         <div class="container">
-            <div class="section_header mb-5">
+            <div class="section_header">
                 <h2><span>Accredation</span> - Licence</h2>
             </div>
             <div class="padding_added_row accredation_row">
@@ -421,7 +421,7 @@
     <section class="section_pd_tb tab_section_home">
        <div class="container">
         <div class="padding_added_row">
-            <div class="section_header mb-3 tab_section_header">
+            <div class="section_header tab_section_header mb-0">
                 <h5>How We Are!</h5>
                 <h2>Reliable & Cost Efficient <br>
                     Recruitment Agency</h2>
@@ -494,7 +494,7 @@
     <!-- =================  Recruitment Process section starts  ================================= -->
     <section class="recruitment_section section_pd_tb">
         <div class="container py-4">
-            <div class="section_header mb-5">
+            <div class="section_header">
                 <h3>How <span>We Do</span></h3>
                 <h2>The Recruitment Process</h2>
             </div>
@@ -556,7 +556,7 @@
 
     <!-- =================  Testimonial section starts  ================================= -->
     <section class="section_pd_tb">
-        <div class="section_header mb-5">
+        <div class="section_header">
             <h3>Clients and Nursing Staff </h3>
         </div>
         <div class="container">
@@ -609,6 +609,89 @@
         </div>
     </section>
     <!-- =================  Testimonial Process section ends  ================================= -->
+
+
+    <!-- =================  find jobs state section starts  ================================= -->
+    <section class="section_pd_tb pt-0 pt-lg-4">
+        <div class="container">
+            <div class="section_header">
+                <h3>Finds Jobs In <span>All State</span></h3>
+                <h2>Jobs Available In Different States</span></h2>
+            </div>
+            <div class="row jobs_state_row padding_added_row">
+                <div class="col-lg-4 col-md-4 col-6 job_state_item">
+                    <div class="job_state_item_wrap">
+                        <a href="#">
+                            <img src="assets/images/job-states/new-south-wales.jpg" alt="New South Wales">
+                        </a>
+                        <div class="job_state_title">
+                            <h5><a href="">New South Wales</a></h5>
+                            <p><a href="">2 jobs open</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-6 job_state_item">
+                    <div class="job_state_item_wrap">
+                        <a href="#">
+                            <img src="assets/images/job-states/queensland.jpg" alt="Queensland">
+                        </a>
+                        <div class="job_state_title">
+                            <h5><a href="">Queensland</a></h5>
+                            <p><a href="">2 jobs open</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-6 job_state_item">
+                    <div class="job_state_item_wrap">
+                        <a href="#">
+                            <img src="assets/images/job-states/victoria.jpg" alt="Victoria">
+                        </a>
+                        <div class="job_state_title">
+                            <h5><a href="">Victoria</a></h5>
+                            <p><a href="">2 jobs open</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-6 job_state_item">
+                    <div class="job_state_item_wrap">
+                        <a href="#">
+                            <img src="assets/images/job-states/south-wales.jpg" alt="South Australia">
+                        </a>
+                        <div class="job_state_title">
+                            <h5><a href="">South Australia</a></h5>
+                            <p><a href="">2 jobs open</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-6 job_state_item">
+                    <div class="job_state_item_wrap">
+                        <a href="#">
+                            <img src="assets/images/job-states/western-australia.jpg" alt="New South Wales">
+                        </a>
+                        <div class="job_state_title">
+                            <h5><a href="">Western Australia</a></h5>
+                            <p><a href="">2 jobs open</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-6 job_state_item">
+                    <div class="job_state_item_wrap">
+                        <a href="#">
+                            <img src="assets/images/job-states/northern-territory.jpg" alt="New South Wales">
+                        </a>
+                        <div class="job_state_title">
+                            <h5><a href="">Northern Territory/Tasmania</a></h5>
+                            <p><a href="">2 jobs open</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="jobs_by_region_button">
+                <a href="">Find Jobs By Region</a>
+            </div>
+        </div>
+    </section>
+    <!-- =================  find jobs state section ends  ================================= -->
 
 
     <div class="mt-5 pt-5"></div>
