footer-top-added

--- a/index.html
+++ b/index.html
@@ -694,6 +694,28 @@
     <!-- =================  find jobs state section ends  ================================= -->
 
 
+    <!-- =================  footer top section starts  ================================= -->
+    <section class="footer_top_section footer_top_row mt-4">
+        <div class="container">
+            <div class="jobs_state_row padding_added_row">
+                <div class="row">
+                    <div class="col-lg-8 col-md-12 col-12">
+                        <div class="section_header">
+                            <h3>Hire The Best With Medical Staff</h3>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-12 col-12 footer_top_buttom_main">
+                        <div class="footer_top_button">
+                            <a href="">Call Us</a>
+                        </div>
+                    </div>
+                </div>  
+            </div>
+        </div>
+    </section>
+    <!-- =================  footer top section ends  ================================= -->
+
+
     <div class="mt-5 pt-5"></div>
 
     <!-- bootstrap js -->
