--- a/index.html
+++ b/index.html
@@ -715,8 +715,74 @@
     </section>
     <!-- =================  footer top section ends  ================================= -->
 
+    
+    <!-- =================  footer section starts  ================================= -->
+    <section class="footer_section section_pd_tb">
+        <div class="container">
+            <div class="padding_added_row">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <div class="footer_item">
+                            <h5>We work Nationally</h5>
+                            <div class="footer_map">
+                                <img src="assets/images/map.png" alt="Map">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <div class="footer_item">
+                            <h5>Contact Us</h5>
+                            <div class="contact_links">
+                                <a href="mailto:join@medicalstaf.com.au">E: join@medicalstaf.com.au</a>
+                                <a href="tel:1300105010">P: 1300 105010</a>
+                                <a href="#">A: PO Box 1444, Lane Cove <br> NSW 1595</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-12 col-12 quick_links_main">
+                        <div class="footer_item">
+                            <h5>Quick Links</h5>
+                            <div class="quick_links">
+                                <a href="">Why become an agency Nurse</a>
+                                <a href="">Education and Training</a>
+                                <a href="">Privacy Policy</a>
+                                <a href="">Referral Bonus</a>
+                                <a href="">Useful Links</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>  
+            </div>
+        </div>
+    </section>
+    <!-- =================  footer section ends  ================================= -->
 
-    <div class="mt-5 pt-5"></div>
+
+    <!-- =================  footer bottom section starts (topbar reused)  ================================= -->
+    <section class="footer_bottom_section">
+        <div class="container">
+            <div class="row padding_added_row topbar_row">
+                <div class="col-lg-8 col-md-8 col-12 topbar_left_main">
+                   <div class="topbar_left">
+                       <span>Copyright © 2024 Medical Staff. All rights reserved.</span>
+                       <span>Developed by: <a href="https://appandwebsite.au/" target="_blank">App and Website Pty Ltd</a></span>
+                   </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-12 topbar_right_main">
+                    <div class="topbar_right">
+                        <p>Follow us:</p>
+                        <div class="social_icons">
+                            <a href="https://www.instagram.com/medicalstaffagency/"><img src="assets/icons/inatagram_icon.png" alt="instagram"></a>
+                            <a href="https://www.facebook.com/medicalstaffagency"><img src="assets/icons/facebook_icon.png" alt="facebook"></a>
+                            <a href="https://www.linkedin.com/company/medical-staff/"><img src="assets/icons/linkedin_icon.png" alt="linkedin" class="linkedin_icon"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =================  footer bottom section ends  ================================= -->
+
 
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
