hero-job-search-added

--- a/index.html
+++ b/index.html
@@ -158,6 +158,77 @@
         </div>
     </section>
     <!-- =================  hero section ends  ================================= -->
+    
+
+    <!-- =================  job search section starts  ======================= -->
+    <section>
+        <div class="job_search_hero_main_text">
+            <div class="hero_content">
+                <div class="wrapper">
+                    <div class="hero_header">
+                        <div class="hero_header">
+                            <h2>Medical Staff</span></h2>
+                            <h3>We’re for Nurses and Midwives</span></h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="job_search_hero_main">
+        <div class="hero_content">
+            <div class="wrapper">
+                <div class="hero_header">
+                    <div class="hero_header">
+                        <h2>Medical Staff</span></h2>
+                        <h3>We’re for Nurses and Midwives</span></h3>
+                    </div>
+                </div>
+                <div class="hero_job_search">
+                    <div class="input_item">
+                        <div class="icon">
+                            <img src="assets/icons/search.png" alt="Search">
+                        </div>
+                        <div class="textfield">
+                            <input type="text" class="inp_itm" placeholder="Job Title or Keyword">
+                        </div>
+                    </div>
+                    <div class="input_item item_small_hide">
+                        <div class="icon">
+                            <img src="assets/icons/location.png" alt="Search">
+                        </div>
+                        <div class="textfield">
+                            <select name="" id="" class="inp_itm">
+                                <option value="">Locations</option>
+                                <option value="">Sydney</option>
+                                <option value="">Brisbane</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="input_item item_small_hide">
+                        <div class="icon">
+                            <img src="assets/icons/list.png" alt="Search">
+                        </div>
+                        <div class="textfield">
+                            <select name="" id="" class="inp_itm">
+                                <option value="">Categories</option>
+                                <option value="">Nursing</option>
+                                <option value="">Medical</option>
+                                <option value="">Aged Care</option>
+                                <option value="">NDIS</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="input_item">
+                        <div class="find_jobs_button">
+                            <a href="">Find Jobs</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =================  job search section ends  ======================= -->
 
 
     <!-- =================  services section starts  ================================= -->
