footer-alignment-fixed

--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
         <div class="container">
             <div class="padding_added_row">
                 <div class="row">
-                    <div class="col-lg-4 col-md-6 col-12">
+                    <div class="col-lg-4 col-md-6 col-12 footer_item_mian">
                         <div class="footer_item">
                             <h5>We work Nationally</h5>
                             <div class="footer_map">
@@ -801,7 +801,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-12">
+                    <div class="col-lg-4 col-md-6 col-12 footer_item_mian">
                         <div class="footer_item">
                             <h5>Contact Us</h5>
                             <div class="contact_links">
@@ -811,7 +811,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-12 col-12 quick_links_main">
+                    <div class="col-lg-4 col-md-12 col-12 quick_links_main footer_item_mian">
                         <div class="footer_item">
                             <h5>Quick Links</h5>
                             <div class="quick_links">
