--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
                 <h2><span>Medical Staff</span></h2>
                 <h3>About US</span></h3>
             </div>
-            <div class="row">
+            <div class="row about_intro">
                 <div class="col-lg-12 col-md-12 col-12">
                     <p>
                         Welcome to Medical Staff, a leading medical and nursing employment agency with offices throughout Australia. We specialise in placing 
@@ -177,9 +177,9 @@
 
     <!-- =================  Our Story section starts  ================================= -->
     <section class="our_story_section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-7 section_pd_tb story_left">
+        <div class="story_wrap">
+            <div class="">
+                <div class="section_pd_tb story_left">
                     <div class="wrapper">
                         <div class="section_header mb-0">
                             <h3 style="text-align: left;">Our <span>Story</span></h3>
@@ -206,11 +206,11 @@
                         </div>
                     </div>
                 </div>
-                <div class=" col-lg-5 story_image">
-                    <div class="image">
-                        <img src="assets/images/our-story.jpg" alt="our story">
-                    </div>
-                </div>
+            </div>
+        </div>
+        <div class="story_image">
+            <div class="image">
+                <img src="assets/images/our-story.jpg" alt="our story">
             </div>
         </div>
     </section>
