about-page-completed

--- a/about.html
+++ b/about.html
@@ -255,7 +255,7 @@
         <div class="container">
             <div class="section_header">
                 <h3>Finds Jobs In <span>All State</span></h3>
-                <h2>Jobs Available In Different States</span></h2>
+                <h2>Jobs Available In Different States</h2>
             </div>
             <div class="row jobs_state_row padding_added_row">
                 <div class="col-lg-4 col-md-4 col-6 job_state_item">
@@ -333,8 +333,86 @@
     <!-- =================  find jobs state section ends  ================================= -->
 
 
+    <!-- =================  Contact Us section starts  ================================= -->
+    <section class="section_pd_tb contact_us_section">
+        <div class="container pb-4">
+            <div class="section_header">
+                <h2>Contact Us</h2>
+            </div>
+            <div class="row padding_added_row contact_row">
+                <div class="col-lg-6">
+                    <div class="wrapper_contact_left">
+                        <div class="image">
+                            <img src="assets/images/contact.jpg" alt="Contact">
+                        </div>
+                        <p class="contact_text_main">Need help? We exist to serve the user with the purpose of providing them with information. We want you to find what you're looking for. For any query, please contact HireCo experts for the best solution.</p>
+                        <div class="contact_list">
+                            <div class="contact_item">
+                                <div class="icon">
+                                    <img src="assets/icons/phone-call.png" alt="Phone">
+                                </div>
+                                <div class="contact_text">
+                                    <p>Call Anytime</p>
+                                    <a href="tel:1300105010">1300 10 50 10</a>
+                                </div>
+                            </div>
+                            <div class="contact_item">
+                                <div class="icon">
+                                    <img src="assets/icons/email.png" alt="Mail">
+                                </div>
+                                <div class="contact_text">
+                                    <p>Send Mail</p>
+                                    <a href="mailto:join@medicalstaff.com.au">join@medicalstaff.com.au</a>
+                                </div>
+                            </div>
+                            <div class="contact_item">
+                                <div class="icon">
+                                    <img src="assets/icons/home-address.png" alt="Address">
+                                </div>
+                                <div class="contact_text">
+                                    <p>Address</p>
+                                    <a href="#">AMA House, Level 3 69 Christie Street, St Leonards, NSW 2065 </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 contact_form_right">
+                    <form>
+                        <div class="row mb-3">
+                            <div class="col">
+                              <input type="text" class="form-control" placeholder="Your Name" aria-label="First name">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col">
+                              <input type="email" class="form-control" placeholder="Your Email" aria-label="Email">
+                            </div>
+                            <div class="col">
+                              <input type="text" class="form-control" placeholder="Subject" aria-label="Subject">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col">
+                              <input type="tel" class="form-control" placeholder="Phone Number" aria-label="Phone">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col">
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="10" placeholder="Message"></textarea>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Send A Message</button>
+                      </form>
+                </div>
+            </div> 
+        </div>  
+    </section>
+    <!-- =================  Contact Us section ends  ================================= -->
+     
+
     <!-- =================  footer top section starts  ================================= -->
-    <section class="footer_top_section footer_top_row mt-4">
+    <section class="footer_top_section footer_top_row">
         <div class="container">
             <div class="jobs_state_row padding_added_row">
                 <div class="row">
@@ -421,6 +499,7 @@
         </div>
     </section>
     <!-- =================  footer bottom section ends  ================================= -->
+
 
 
     <!-- bootstrap js -->
