--- a/index.html
+++ b/index.html
@@ -685,10 +685,10 @@
 
     <!-- =================  find jobs state section starts  ================================= -->
     <section class="section_pd_tb pt-0 pt-lg-4">
-        <div class="container">
+        <div class="container pb-4">
             <div class="section_header">
                 <h3>Finds Jobs In <span>All State</span></h3>
-                <h2>Jobs Available In Different States</span></h2>
+                <h2>Jobs Available In Different States</h2>
             </div>
             <div class="row jobs_state_row padding_added_row">
                 <div class="col-lg-4 col-md-4 col-6 job_state_item">
@@ -767,7 +767,7 @@
 
 
     <!-- =================  footer top section starts  ================================= -->
-    <section class="footer_top_section footer_top_row mt-4">
+    <section class="footer_top_section footer_top_row">
         <div class="container">
             <div class="jobs_state_row padding_added_row">
                 <div class="row">
