--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
                 <h2><span>Medical Staff</span></h2>
                 <h3>About US</span></h3>
             </div>
-            <div class="row about_intro">
+            <div class="row padding_added_row about_intro">
                 <div class="col-lg-12 col-md-12 col-12">
                     <p>
                         Welcome to Medical Staff, a leading medical and nursing employment agency with offices throughout Australia. We specialise in placing 
@@ -409,7 +409,7 @@
         </div>  
     </section>
     <!-- =================  Contact Us section ends  ================================= -->
-     
+
 
     <!-- =================  footer top section starts  ================================= -->
     <section class="footer_top_section footer_top_row">
